syntax = "proto3";

package userAPI_v1;

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

option go_package = "github.com/olezhek28/microservices_course/week_1/grpc/pkg/note_v1;note_v1";

service UserAPIV1 {
	rpc Create(CreateRequest) returns (CreateResponse);
	rpc Get(GetRequest) returns (GetResponse);
	rpc Update(UpdateRequest) returns (google.protobuf.Empty);
    rpc Delete(DeleteRequest) returns (google.protobuf.Empty);
}

message UserInfo {
    string name = 1;
    string email = 2;
    string password = 3;
    string password_confirm = 4;
    Role role = 5;
}

enum Role {
    USER = 0;
    ADMIN = 1; 
}

message UpdateUserInfo {
    google.protobuf.Int64Value id = 1;
    google.protobuf.StringValue name = 2;
    google.protobuf.StringValue email = 3;
}

message CreateRequest {
    UserInfo user = 1;
}

message CreateResponse {
    int64 id = 1;
}

message GetRequest {
    int64 id = 1;
}

message GetResponse {
    UserInfo user = 1;
}

message UpdateRequest {
    int64 id = 1;
    UpdateUserInfo info = 2;
}

message DeleteRequest {
    int64 id = 1;
}